<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addkost.AddKostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/add_kost_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_kost_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/booking_kost_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_kost_title"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_button"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booking_kost_image" />

        <TextView
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_button" />

        <EditText
            android:id="@+id/input_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/add_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_name" />

        <TextView
            android:id="@+id/add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_add_name" />

        <EditText
            android:id="@+id/input_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/add_location"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/add_location" />

        <TextView
            android:id="@+id/add_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_gender"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_add_location" />

        <Spinner
            android:id="@+id/input_add_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:minHeight="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_gender" />

        <TextView
            android:id="@+id/add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_price"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_add_gender" />

        <EditText
            android:id="@+id/input_add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/add_price"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/add_price" />

        <TextView
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_add_price" />

        <EditText
            android:id="@+id/input_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/add_description"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/add_description" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_add_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>