<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/order_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/title_search"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_kost_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:text="@string/add_kost_text"
            app:layout_constraintEnd_toStartOf="@id/add_kost_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_search" />

        <Button
            android:id="@+id/add_kost_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_kost"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_kost_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_kost_text" />

        <TextView
            android:id="@+id/order_search_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_search"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_kost_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="?attr/actionBarSize"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_search_customer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>