<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <TextView
            android:id="@+id/move_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/move_created"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/move_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="10dp"
            android:text="@string/move_date"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/move_created" />

        <TextView
            android:id="@+id/move_location_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:text="@string/move_location_start"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/move_date" />

        <TextView
            android:id="@+id/move_location_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="10dp"
            android:text="@string/move_location_end"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/move_location_start" />

        <TextView
            android:id="@+id/detail_move_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/move_created"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginEnd="6dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintBottom_toBottomOf="@+id/move_created"
            app:layout_constraintEnd_toStartOf="@+id/detail_button"
            app:layout_constraintTop_toTopOf="@+id/move_created" />

        <TextView
            android:id="@+id/detail_move_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/move_date"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginEnd="6dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintBottom_toBottomOf="@+id/move_date"
            app:layout_constraintEnd_toStartOf="@+id/detail_button"
            app:layout_constraintTop_toTopOf="@+id/move_date" />

        <TextView
            android:id="@+id/detail_move_location_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/move_location_start"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginEnd="6dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintBottom_toBottomOf="@+id/move_location_start"
            app:layout_constraintEnd_toStartOf="@+id/detail_button"
            app:layout_constraintTop_toTopOf="@+id/move_location_start" />

        <TextView
            android:id="@+id/detail_move_location_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/move_location_end"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/move_location_end"
            app:layout_constraintEnd_toStartOf="@+id/detail_button"
            app:layout_constraintTop_toTopOf="@+id/move_location_end"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/detail_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/detail_button"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>